[package]
name = "compat-uuid"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0-rc.1"
rocket_codegen = "0.4.0-rc.1"
diesel = { version = "1.3.2", features = ["postgres", "chrono", "uuid"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = "1.0"

[dependencies.rocket_contrib]
version = "0.4.0-rc.1"
default-features = false
features = ["uuid"]
