[package]
name = "compat-uuid"
version = "0.1.0"
authors = ["technetos <mrgould93@gmail.com>"]
edition = "2018"

[dependencies]
rocket_contrib = { version = "0.4.0", default-features = false, features = ["uuid"] }
diesel = { version = "1.3.3", default-features = false, features = ["uuid", "postgres" ] }
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_derive = "1.0"
serde = "1.0"

[replace]
"diesel:1.3.3" = {  git = "https://github.com/diesel-rs/diesel" }
"diesel_derives:1.3.0" = { git = "https://github.com/diesel-rs/diesel" }
